# airllm

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_ja.md  funding.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  stale.yml
air_llm/: __init__.py  inference_example.py
air_llm/airllm/: __init__.py  airllm.py  airllm_baichuan.py  airllm_base.py  airllm_chatglm.py  airllm_cohere.py  airllm_deepseek.py  airllm_falcon3.py  airllm_gemma.py  airllm_gemma4.py  airllm_glm4.py  airllm_granite.py  airllm_internlm.py  airllm_jamba.py  airllm_llama4.py  airllm_llama_mlx.py  airllm_mistral.py  airllm_mixtral.py  airllm_olmo2.py  airllm_phi.py  airllm_qwen.py  airllm_qwen2.py  airllm_qwen3.py  airllm_zamba.py  async_loader.py  auto_model.py  constants.py  kv_cache.py  model_registry.py  moe_loader.py  paged_kv_cache.py  profiler.py  quantization.py  speculative.py
air_llm/airllm/engine/: inference_engine.py
air_llm/airllm/io/: __init__.py  downloader.py
air_llm/airllm/persist/: __init__.py  mlx_model_persister.py  model_persister.py  safetensor_model_persister.py
air_llm/airllm/utils/: __init__.py  core.py
air_llm/examples/: run_all_types_of_models.ipynb  run_llama3.1_405B.ipynb  run_on_macos.ipynb
air_llm/tests/: conftest.py  test_async_loader.py  test_automodel.py  test_compression.py  test_constants.py  test_downloader.py  test_edge_cases.py  test_inference_engine.py  test_kv_cache.py  test_model_backends.py  test_model_layer_config.py  test_model_registry.py  test_moe_loader.py  test_new_model_backends.py  test_paged_kv_cache.py  test_persist.py  test_profiler.py  test_quantization.py  test_speculative.py  test_turboquant_integration.py  test_utils.py
anima_100k/: README.md  longer_training.py  modeling_flash_llama.py  run_longer_training.sh
assets/: README.md
data/: README.md
docs/: 2026_LLM_INFERENCE_RESEARCH.md  API_REFERENCE.md  ARCHITECTURE.md  CLASS_HIERARCHY.md  HARDWARE_GUIDE.md  MODEL_INTEGRATION.md  QUICKSTART.md  SCIENTIFIC_REVIEW.md  SUPPORTED_MODELS.md  USAGE_GUIDE.md  VRAM_MANAGEMENT.md
eval/: README.md  benchmark.py
examples/: README.md  inference.ipynb
rlhf/: README.md  qlora_dpo.py  run_dpo_training.sh
scripts/: README.md  test_cn_dataset_lengths.py  validate.py  validate.sh
training/: README.md  README_en.md  qlora.py  run_Amina_training.sh  run_finetune_training_based_on_Anima.sh
